--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,26 @@ nav{
     text-transform: uppercase;
     font-weight: bold;
 }
+
+#advice h3{
+    padding: 10px 1px;
+    
+}
+#advice{
+    background-color: rgba(248, 235, 219, 0.918);
+    background-image: url('images/backgrounds/bg2.jpg');
+}
+
+.container{
+    padding: 40px;
+}
+
+.container .row2{
+    padding: 40px;
+}
+.index {
+
+    min-width: 100%;
+    min-height: 100%;
+  }
+
